--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,10 @@ dependencies:
   cloud_firestore: ^4.5.2
   firebase_auth: ^4.4.2
   firebase_core: ^2.10.0
+  firebase_storage: ^11.1.1
   flutter:
     sdk: flutter
+  image_picker: ^0.8.7+4
     
 
 dev_dependencies:
