--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   firebase_storage: ^11.1.1
   flutter:
     sdk: flutter
+  google_sign_in: ^6.1.0
   image_picker: ^0.8.7+4
     
 
