shipment_form google maps(Location)
front end design is added to the shipment information form
also Location file is added to apply google maps API

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -32,6 +32,9 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyD_GFP_OqqZxX-u6wwCHN54pZM2_OgjM1U"/> 
     </application>
 
 </manifest>
