--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   firebase_storage: ^11.1.1
   flutter:
     sdk: flutter
+  geocoding: ^2.1.0
+  google_maps_flutter: ^2.2.6
   google_sign_in: ^6.1.0
   image_picker: ^0.8.7+4
     
