--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: speedyship
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=2.19.5 <3.0.0'
+  sdk: ">=2.19.5 <3.0.0"
 
 dependencies:
   cloud_firestore: ^4.5.2
@@ -14,11 +14,11 @@ dependencies:
   firebase_storage: ^11.1.1
   flutter:
     sdk: flutter
+  flutter_icons: ^1.1.0
   geocoding: ^2.1.0
   google_maps_flutter: ^2.2.6
   google_sign_in: ^6.1.0
   image_picker: ^0.8.7+4
-    
 
 dev_dependencies:
   flutter_test:
@@ -28,4 +28,4 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-  - lib/images/
+    - lib/images/
