--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_icons: ^1.1.0
+  flutter_neumorphic: ^3.2.0
   geocoding: ^2.1.0
   google_maps_flutter: ^2.2.6
   google_sign_in: ^6.1.0
