--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   google_maps_flutter: ^2.2.6
   google_sign_in: ^6.1.0
   image_picker: ^0.8.7+4
+  shared_preferences: ^2.1.1
 
 dev_dependencies:
   flutter_test:
