--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   image_picker: ^0.8.7+4
   shared_preferences: ^2.1.1
   flex_color_scheme: ^7.0.5
+  responsive_sizer: ^3.1.1
 
 dev_dependencies:
   flutter_test:
