--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,10 @@ dependencies:
   email_validator: ^2.1.17
   responsive_sizer: ^3.1.1
   flutter_pw_validator: ^1.6.0
+  path_provider: ^2.0.15
+  flutter_file_dialog: ^3.0.1
+  universal_html: ^2.2.2
+  elegant_notification: ^1.10.0
 
 dev_dependencies:
   flutter_test:
