--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   flutter_neumorphic: ^3.2.0
   geocoding: ^2.1.0
   google_maps_flutter: ^2.2.6
-  google_sign_in: ^6.1.2
+  google_sign_in: ^5.2.1
   image_picker: ^0.8.7+4
   shared_preferences: ^2.1.1
   flex_color_scheme: ^7.0.5
@@ -31,6 +31,9 @@ dependencies:
   flutter_file_dialog: ^3.0.1
   universal_html: ^2.2.2
   elegant_notification: ^1.10.0
+  flutter_image: ^4.1.6
+  flutter_pdfview: ^1.3.1
+
 
 dev_dependencies:
   flutter_test:
