--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   flutter_icons: ^1.1.0
   flutter_neumorphic: ^3.2.0
   geocoding: ^2.1.0
-  google_maps_flutter: ^2.2.6
+  google_maps_flutter: ^2.2.8
   google_sign_in: ^6.1.2
   image_picker: ^0.8.7+4
   shared_preferences: ^2.1.1
@@ -31,6 +31,12 @@ dependencies:
   flutter_file_dialog: ^3.0.1
   universal_html: ^2.2.2
   elegant_notification: ^1.10.0
+  places_service: ^0.1.3
+  flutter_google_places_hoc081098: ^1.2.0
+  google_maps_webservice: ^0.0.20-nullsafety.5
+  google_api_headers: ^1.6.0
+  flutter_image: ^4.1.6
+  flutter_pdfview: ^1.3.1
 
 dev_dependencies:
   flutter_test:
